{
  "version": 4,
  "terraform_version": "1.9.6",
  "serial": 18,
  "lineage": "0b4b4a12-ccda-3af8-2132-ea11d28ccebe",
  "resources": [
    {
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "net_int",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/8695039e-5771-4111-ace7-db81228d3f22/resourceGroups/Cloud_ressources/providers/Microsoft.Network/networkInterfaces/network_interface",
            "internal_domain_name_suffix": "e5o54jcndbde5hasjv43hrcxmf.ax.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "internal",
                "primary": true,
                "private_ip_address": "10.123.1.4",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "public_ip_address_id": "/subscriptions/8695039e-5771-4111-ace7-db81228d3f22/resourceGroups/Cloud_ressources/providers/Microsoft.Network/publicIPAddresses/public_ip1",
                "subnet_id": "/subscriptions/8695039e-5771-4111-ace7-db81228d3f22/resourceGroups/Cloud_ressources/providers/Microsoft.Network/virtualNetworks/vm_network/subnets/vm_subnet"
              }
            ],
            "location": "westeurope",
            "name": "network_interface",
            "private_ip_address": "10.123.1.4",
            "private_ip_addresses": [
              "10.123.1.4"
            ],
            "resource_group_name": "Cloud_ressources",
            "tags": {
              "environment": "dev"
            }
          },
          "dependencies": [
            "azurerm_public_ip.public_ip1",
            "azurerm_resource_group.Cloud_rg",
            "azurerm_subnet.subnet",
            "azurerm_virtual_network.virtual_net"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "security_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/8695039e-5771-4111-ace7-db81228d3f22/resourceGroups/Cloud_ressources/providers/Microsoft.Network/networkSecurityGroups/vm_security",
            "location": "westeurope",
            "name": "vm_security",
            "resource_group_name": "Cloud_ressources",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "*",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "vm_security_rule",
                "priority": 100,
                "protocol": "*",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": {
              "environment": "dev"
            },
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.Cloud_rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "security_rule",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": [],
            "destination_application_security_group_ids": [],
            "destination_port_range": "*",
            "destination_port_ranges": [],
            "direction": "Inbound",
            "id": "/subscriptions/8695039e-5771-4111-ace7-db81228d3f22/resourceGroups/Cloud_ressources/providers/Microsoft.Network/networkSecurityGroups/vm_security/securityRules/vm_security_rule",
            "name": "vm_security_rule",
            "network_security_group_name": "vm_security",
            "priority": 100,
            "protocol": "*",
            "resource_group_name": "Cloud_ressources",
            "source_address_prefix": "*",
            "source_address_prefixes": [],
            "source_application_security_group_ids": [],
            "source_port_range": "*",
            "source_port_ranges": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_network_security_group.security_group",
            "azurerm_resource_group.Cloud_rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "public_ip1",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Dynamic",
            "availability_zone": "No-Zone",
            "id": "/subscriptions/8695039e-5771-4111-ace7-db81228d3f22/resourceGroups/Cloud_ressources/providers/Microsoft.Network/publicIPAddresses/public_ip1",
            "idle_timeout_in_minutes": 4,
            "ip_version": "IPv4",
            "location": "westeurope",
            "name": "public_ip1",
            "resource_group_name": "Cloud_ressources",
            "sku": "Basic",
            "sku_tier": "Regional",
            "tags": {
              "environment": "dev"
            }
          },
          "dependencies": [
            "azurerm_resource_group.Cloud_rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefix": "10.123.1.0/24",
            "address_prefixes": [
              "10.123.1.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/8695039e-5771-4111-ace7-db81228d3f22/resourceGroups/Cloud_ressources/providers/Microsoft.Network/virtualNetworks/vm_network/subnets/vm_subnet",
            "name": "vm_subnet",
            "resource_group_name": "Cloud_ressources",
            "virtual_network_name": "vm_network"
          },
          "dependencies": [
            "azurerm_resource_group.Cloud_rg",
            "azurerm_virtual_network.virtual_net"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet_network_security_group_association",
      "name": "sga",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/8695039e-5771-4111-ace7-db81228d3f22/resourceGroups/Cloud_ressources/providers/Microsoft.Network/virtualNetworks/vm_network/subnets/vm_subnet",
            "network_security_group_id": "/subscriptions/8695039e-5771-4111-ace7-db81228d3f22/resourceGroups/Cloud_ressources/providers/Microsoft.Network/networkSecurityGroups/vm_security",
            "subnet_id": "/subscriptions/8695039e-5771-4111-ace7-db81228d3f22/resourceGroups/Cloud_ressources/providers/Microsoft.Network/virtualNetworks/vm_network/subnets/vm_subnet"
          },
          "dependencies": [
            "azurerm_network_security_group.security_group",
            "azurerm_resource_group.Cloud_rg",
            "azurerm_subnet.subnet",
            "azurerm_virtual_network.virtual_net"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "virtual_net",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.123.0.0/16"
            ],
            "flow_timeout_in_minutes": 0,
            "guid": "24ffdd27-184d-4f46-9c12-4d7dd3c45765",
            "id": "/subscriptions/8695039e-5771-4111-ace7-db81228d3f22/resourceGroups/Cloud_ressources/providers/Microsoft.Network/virtualNetworks/vm_network",
            "location": "westeurope",
            "name": "vm_network",
            "resource_group_name": "Cloud_ressources",
            "subnet": [
              {
                "address_prefix": "10.123.1.0/24",
                "id": "/subscriptions/8695039e-5771-4111-ace7-db81228d3f22/resourceGroups/Cloud_ressources/providers/Microsoft.Network/virtualNetworks/vm_network/subnets/vm_subnet",
                "name": "vm_subnet",
                "security_group": "/subscriptions/8695039e-5771-4111-ace7-db81228d3f22/resourceGroups/Cloud_ressources/providers/Microsoft.Network/networkSecurityGroups/vm_security"
              }
            ],
            "tags": {
              "environment": "dev"
            },
            "vm_protection_enabled": false
          },
          "dependencies": [
            "azurerm_resource_group.Cloud_rg"
          ]
        }
      ]
    }
  ]
}